--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Docker volumes
+volumes/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -120,7 +123,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
 env/
 venv/
