Rough prototype work in progress. Scylla and ES mostly works now.

--- a/memas-docker/.env
+++ b/memas-docker/.env
@@ -5,7 +5,7 @@ ELASTIC_PASSWORD=abc123
 KIBANA_PASSWORD=abc123
 
 # Version of Elastic products
-ES_VERSION=8.8.1
+STACK_VERSION=8.8.1
 
 # Set the cluster name
 CLUSTER_NAME=docker-cluster
