--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+# benchmarking requirements
+ipykernel
+datasets==2.13.1
+apache_beam==2.49.0
+openai
+
 flask==2.3.2
 tensorflow==2.12.0
 tensorflow_hub
 pymilvus==2.2.8
 elasticsearch==8.8.0
 scylla-driver==3.26.2
-nltk==3.8.1
+nltk
