--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,8 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r test-requirements.txt
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        source setup-env.sh
     - name: Run unit tests with pytest
       run: |
         python3 -m pytest tests
