--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,6 +29,7 @@ jobs:
         source setup-env.sh
     - name: Run unit tests with pytest
       run: |
+        source .venv/bin/activate
         python3 -m pytest tests
 #     - name: Lint with flake8
 #       run: |
