--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,15 @@ services:
     container_name: milvus-minio
     image: minio/minio:RELEASE.2022-03-17T06-34-49Z
     environment:
+      bucketName: a-bucket
       MINIO_ACCESS_KEY: minioadmin
       MINIO_SECRET_KEY: minioadmin
     volumes:
       - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/minio:/minio_data
     command: minio server /minio_data
+    ports:
+      - "9000:9000" 
+      - "38063:38063" 
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 30s
