--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # Port to run memas
 FLASK_RUN_PORT=8010
 
+MEMAS_CONF_FILE=memas-config.yml
 
 # Password for the 'elastic' user (at least 6 characters)
 ELASTIC_PASSWORD=abc123
