--- a/memas/memas-config.yml
+++ b/memas/memas-config.yml
@@ -11,3 +11,8 @@ ELASTICSEARCH:
 MILVUS:
   ip: "127.0.0.1"
   port: 19530
+
+CELERY:
+  broker_url: "redis://localhost"
+  result_backend: "redis://localhost"
+  task_ignore_result: True
